# companion-app

./: .env.example  .gitignore  Cargo.toml  EVAL_PROTOCOL.md  README.md  config.example.toml
.github/workflows/: ci.yml  release.yml
android/: .gitignore  settings.gradle.kts
android/app/: build.gradle.kts
android/app/src/main/: AndroidManifest.xml
android/app/src/main/kotlin/com/companion/awareness/: AlertLog.kt  AppLog.kt  AudioCapture.kt  AwarenessAccessibilityService.kt  AwarenessApp.kt  AwarenessService.kt  CoreBridge.kt  DebugLog.kt  FocusedApp.kt  HistoryActivity.kt  InterestsCatalog.kt  LivenessWatchdog.kt  LogsActivity.kt  MainActivity.kt  ModelIoActivity.kt  ModelIoLog.kt  ProfileActivity.kt  RatingReceiver.kt  ScreenCapture.kt  Settings.kt  TraceActivity.kt  TraceLog.kt  Tts.kt
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/xml/: accessibility_service_config.xml
android/core-rs/: Cargo.toml  build.sh
android/core-rs/src/: lib.rs
crates/awareness-cli/: Cargo.toml
crates/awareness-cli/src/: a11y.rs  aggregator.rs  api.rs  api_vision.rs  audio.rs  backend.rs  budget.rs  capture.rs  capture_portal.rs  capture_screenshot.rs  config.rs  config_file.rs  dedup.rs  eval.rs  flow.rs  gate.rs  lib.rs  main.rs  memory.rs  ocr.rs  setup.rs  tts.rs  vad.rs  whisper.rs
crates/awareness-cli/tests/: smoke.rs
crates/awareness-core/: Cargo.toml
crates/awareness-core/src/: api.rs  api_vision.rs  backend.rs  budget.rs  config.rs  config_file.rs  dedup.rs  flow.rs  gate.rs  jsonl.rs  lib.rs  memory.rs  types.rs  user_profile.rs
scripts/: a11y_dump.py  analyze_runs.py  check_env.sh  manual_test.py
