[package]
name = "awareness-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "awareness-cli"
path = "src/main.rs"

[dependencies]
awareness-core = { path = "../awareness-core" }
tokio = { version = "1", features = ["full"] }
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
toml = "0.8"
num_cpus = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Image processing
image = "0.25"
base64 = "0.22"

# These have native deps - mark as optional so CI can still check the rest
# Enable with: cargo build --features full
[features]
default = []
# Composable features so CI can check subsets that don't need all system libs.
portal = ["dep:ashpd", "dep:pipewire", "dep:libc"]
ocr    = ["dep:leptess"]
audio  = ["dep:cpal", "dep:webrtc-vad", "dep:whisper-rs"]
full   = ["portal", "ocr", "audio", "awareness-core/full"]

[dependencies.leptess]
version = "0.14"
optional = true

[dependencies.cpal]
version = "0.15"
optional = true

[dependencies.webrtc-vad]
version = "0.4"
optional = true

[dependencies.whisper-rs]
version = "0.12"
optional = true

[dependencies.ashpd]
version = "0.9"
default-features = false
features = ["tokio"]
optional = true

[dependencies.pipewire]
version = "0.8"
optional = true

[dependencies.libc]
version = "0.2"
optional = true

[dev-dependencies]
pretty_assertions = "1"
tokio-test = "0.4"
