[package]
name = "awareness-core"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1"
thiserror = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
tokio = { version = "1", features = ["fs", "io-util", "sync", "time", "macros", "rt"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
toml = "0.8"
base64 = "0.22"
clap = { version = "4", features = ["derive"] }
dotenvy = "0.15"
# Pure-Rust multi-pattern matcher used to pick which of the user's
# explicit interests are worth injecting into the prompt on each tick.
aho-corasick = "1.1"

[features]
default = []
# Opt-in flag set by front-ends that bundle the audio/STT pipeline
# (whisper model required). Currently used only to gate the whisper
# model existence check in `Config::validate`.
full = []

[dev-dependencies]
pretty_assertions = "1"
tokio-test = "0.4"
